PDF2SVGConverter  - fixed logic for printing usage and exiting with correct exit status  - added -exitonerr option to force exit on first pdf parse error (default is to continue to next pdf) pdf2svg.sh  - minor cleanup of java option handling can set heap values separately now